<?xml version="1.0" encoding="utf-8"?>
<!--Copyright 2009-2014 Michael Kohler.

This file is part of AllAroundScore.

    AllAroundScore is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    AllAroundScore is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with AllAroundScore.  If not, see <http://www.gnu.org/licenses/>.

Filename: score.xml
Version: 3.0
Description: tools used to collect and display scores/videos for gymnasts in a meet
Changes:
12/31/2013: created header data
1/2/2014: refactoring of new implementation
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/score_piclayout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/score1">  
	<LinearLayout
		android:id="@+id/gymnastOpcLayout"
		android:orientation="vertical"
    	android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
    	android:background="@drawable/mask_background">
	    <LinearLayout
	    	android:id="@+id/scoreMainToolBar"
	    	android:orientation="horizontal"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content">
		    <Spinner
				android:id="@+id/scoreGymnastSpinner"
				android:layout_width="150dp"
				android:layout_height="wrap_content"/> 
			<Spinner
				android:id="@+id/scoreEventSpinner"
				android:layout_width="150dp" 
				android:layout_height="wrap_content"/>
			<EditText
				android:id="@+id/scoreNewScore"
				android:layout_width="75dp"
				android:layout_height="wrap_content"
				android:selectAllOnFocus="true"
				android:inputType="numberDecimal"
				android:layout_gravity="center_vertical"/>
			<View android:layout_width="10dp"
				  android:layout_height="fill_parent"/>
			<Button android:id="@+id/scoreVideo"
				android:layout_width="60dp" 
				android:layout_height="60dp" 
				android:background="@drawable/video_button_states"/>
			<View android:layout_width="10dp"
				  android:layout_height="fill_parent"/>
			<Button android:id="@+id/scoreAdd"
				android:layout_width="50dp" 
				android:layout_height="50dp"
				android:background="@drawable/add_button_states"/>
		</LinearLayout>
		
		
		
		
		<ScrollView
			android:id="@+id/scrollView"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:paddingTop="10sp"
			android:paddingLeft="2sp">
			<HorizontalScrollView
				android:id="@+id/hScrollView"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

				<TableLayout
					android:id="@+id/scoreTableLayout"
					android:layout_width="wrap_content"
					android:layout_height="fill_parent">
					<TableRow
						android:id="@+id/scoreHeadderRow"
						android:layout_width="fill_parent">
						<TextView
							android:id="@+id/scoreGymnastTV"
							android:textColor="@color/solid_black"
							android:layout_width="fill_parent"
							android:layout_gravity="center"
							android:textStyle="bold"
							android:text="@string/gymnastStringScore"/>
						<TextView
							android:id="@+id/scoreFloorTV"
							android:textColor="@color/solid_black"
							android:layout_width="fill_parent"
							android:layout_gravity="center"
							android:textStyle="bold"
							android:text="@string/floorStringScore"/>
						<TextView
							android:id="@+id/scoreVaultTV"
							android:textColor="@color/solid_black"
							android:layout_width="fill_parent"
							android:layout_gravity="center"
							android:textStyle="bold"
							android:text="@string/vaultStringScore"/>
						<TextView
							android:id="@+id/scoreBarsTV"
							android:textColor="@color/solid_black"
							android:layout_width="fill_parent"
							android:layout_gravity="center"
							android:textStyle="bold"
							android:text="@string/barsStringScore"/>
						<TextView
							android:id="@+id/scoreBeamTV"
							android:textColor="@color/solid_black"
							android:layout_width="fill_parent"
							android:layout_gravity="center"
							android:textStyle="bold"
							android:text="@string/beamStringScore"/>
						<TextView
							android:id="@+id/scoreAllAroundTV"
							android:textColor="@color/solid_black"
							android:layout_width="fill_parent"
							android:layout_gravity="center"
							android:textStyle="bold"
							android:text="@string/totalStringScore"/>
						<TextView
							android:id="@+id/scoreTargetTV"
							android:textColor="@color/solid_black"
							android:layout_width="fill_parent"
							android:layout_gravity="center"
							android:textStyle="bold"
							android:text="@string/targetStringScore"/>
					</TableRow>
					<View
						android:layout_height="2dp"
						android:layout_width="fill_parent"
						android:background="@color/solid_black"/>
				</TableLayout>
			</HorizontalScrollView>
		</ScrollView>
	</LinearLayout>		
</LinearLayout>
