<?xml version="1.0" encoding="utf-8"?>
<!--Copyright 2009-2014 Michael Kohler.

This file is part of AllAroundScore.

    AllAroundScore is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    AllAroundScore is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with AllAroundScore.  If not, see <http://www.gnu.org/licenses/>.

Filename: main.xml
Version: 3.0
Description: the main app window providing access to the objects
Changes:
12/31/2013: created header data
1/2/2014: refactoring of new implementation
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/main_piclayout"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/mask_background">  
	<LinearLayout
		android:id="@+id/gymnastOpcLayout"
		android:orientation="vertical"
    	android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
    	android:background="@drawable/mask_background">
    	<TextView  
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:text="@string/hello"
		    android:gravity="center"
		    android:textColor="@color/solid_black"
		    android:textStyle="bold"
		    android:textSize="15sp"/>   
		<ScrollView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
		<LinearLayout
			android:id="@+id/mainBtnLayout"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingTop="10sp"
			android:paddingLeft="30sp">
			<Button android:id="@+id/mainBtnAddGymnast"
				android:layout_width="70dp" 
				android:layout_height="70dp"
				android:layout_gravity="center"
				android:background="@drawable/gymnast_button_states"/>
			<TextView  
				    android:layout_width="wrap_content" 
				    android:layout_height="wrap_content" 
			    	android:text="@string/manageGymnastsString"
				    android:gravity="center"
				    android:textColor="@color/solid_black"
				    android:textStyle="bold"
				    android:textSize="12sp"/>
		</LinearLayout>	
		<LinearLayout
			android:id="@+id/scndBtnLayout"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingLeft="180sp">
			<Button android:id="@+id/mainBtnAddMeet"
				android:layout_width="70dp" 
				android:layout_height="70dp"
				android:layout_gravity="center"
				android:background="@drawable/meets_button_states"/>
			<TextView  
				android:layout_width="100dp" 
				android:layout_height="fill_parent" 
				android:text="@string/manageMeetsString"
			    android:gravity="center"
				android:textColor="@color/solid_black"
				android:textStyle="bold"
				android:textSize="12sp"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/thrdBtnLayout"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:paddingLeft="40sp"
			android:orientation="vertical">
			<Button android:id="@+id/mainBtnManageMeet"
				android:layout_width="70dp" 
				android:layout_height="70dp" 
				android:layout_gravity="center"
				android:background="@drawable/scores_button_states"/>
			<TextView  
			    android:layout_width="125dp" 
			    android:layout_height="fill_parent" 
			    android:text="@string/manageScoresString"
			    android:gravity="center"
			    android:textColor="@color/solid_black"
			    android:textStyle="bold"
			    android:textSize="12sp"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/frthBtnLayout"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:paddingLeft="190sp"
			android:orientation="vertical">
			<Button android:id="@+id/mainBtnDoStats"
				android:layout_width="70dp" 
				android:layout_height="70dp" 
				android:layout_gravity="center"
				android:background="@drawable/stats_button_states"/>
			<TextView  
			    android:layout_width="125dp" 
			    android:layout_height="fill_parent" 
			    android:text="@string/manageStatsString"
			    android:gravity="center"
			    android:textColor="@color/solid_black"
			    android:textStyle="bold"
			    android:textSize="12sp"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/fifthBtnLayout"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" 
			android:paddingLeft="50sp"
			android:orientation="vertical">
			<Button android:id="@+id/mainHelp"
				android:layout_width="70dp" 
				android:layout_height="70dp" 
				android:layout_gravity="center"
				android:background="@drawable/symbol_help"/>
			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="fill_parent" 
			    android:text="@string/helpString"
			    android:gravity="center"
			    android:textColor="@color/solid_black"
			    android:textStyle="bold"
			    android:textSize="12sp"/>
		</LinearLayout>
		</LinearLayout>
		</ScrollView>
	</LinearLayout>
</LinearLayout>